samples/_failures_safe/1761711539_13f40a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c535990.c: In function ‘main’:
./samples/SAFE/__tmp_5c535990.c:175:5: error: expected identifier or ‘(’ at end of input
  175 |     Buffer
      |     ^~~~~~
./samples/SAFE/__tmp_5c535990.c:175:5: error: expected declaration or statement at end of input
